# katana-tsl-parser

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Justfile  default.tsl  pyproject.toml
katana_tsl_parser/: errors.py  main.py  models.py
katana_tsl_parser/models/: __init__.py  enums.py  mod_fx.py  tsl.py  types.py
tests/unit/: test_models.py
tests/unit/snapshots/: factory_v1.json  factory_v1.tsl  temp_v2.json  temp_v2.tsl
